--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-redis": "^5.0.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1"
+    "express-session": "^1.17.1",
+    "ioredis": "^4.19.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
