--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "connect-redis": "^5.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "ioredis": "^4.19.0"
+    "ioredis": "^4.19.0",
+    "mongoose": "^5.10.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
